Fix page jumper issue * I'm not exactly sure what is causing this problem, but this seems to fix   it. Further investigation is needed.

--- a/content/css/gamefox-ads.css
+++ b/content/css/gamefox-ads.css
@@ -1,6 +1,6 @@
 @-moz-document domain(gamefaqs.com)
 {
-    .ad, .adbox, .rubics_netxp1_main, .prWrap, #gne_nav, #mpu_wrap, #footer,
+    .ad, .adbox, .rubics_netxp1_main, .prWrap, #gne_nav, #sponsored_links, #mpu_wrap, #footer,
     iframe, img[alt="madison"], #content > div[style="text-align: center;"]
     {
         display: none !important;
